--- a/Intermediate_Numpy.ipynb
+++ b/Intermediate_Numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWW1sLoFPHqIL32Aic6qh8",
+      "authorship_tag": "ABX9TyPvQ+Rzd3TEG3KZRYJXsF70",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "WRiL4Aqh0BaG"
       },
@@ -48,9 +48,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RR4HDqlNAoOJ",
-        "outputId": "9394628f-ac51-4208-ad14-ced4b9a7fb06"
+        "outputId": "e0a44835-2765-47c6-b76c-cc481436800c"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -75,15 +75,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Er2w7KFAwk7",
-        "outputId": "bb286c7d-cf20-4e29-a4ff-3b68492b93ee"
+        "outputId": "6de4b07d-3bb1-46f8-82a3-24a30cce6756"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[1, 2, 1, 8, 9, 5, 7, 5, 8, 1]])"
+              "array([[1, 3, 4, 3, 8, 0, 1, 0, 7, 5]])"
             ]
           },
           "metadata": {},
@@ -102,9 +102,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X7z4QxBvA92v",
-        "outputId": "da29ddb6-2a09-4046-d706-bc77c3894b17"
+        "outputId": "e9ac300c-490f-43ef-a082-9825997e127b"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,9 +131,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KjtSW_5DBFdG",
-        "outputId": "3beb0e90-af3d-4fc1-8358-0289eb3319f3"
+        "outputId": "031e7e79-65a5-4b6b-eec5-27b3571a42b0"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +150,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -168,9 +168,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j0NXL-VyBpEb",
-        "outputId": "c7de1130-149f-4883-89c7-dd5e6188c767"
+        "outputId": "82cf561d-7758-4cd8-a16b-a89df8504b4a"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,7 +187,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -205,9 +205,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ps2GWov1CJ2u",
-        "outputId": "64677510-90fc-4a16-e44e-afa7c5711df5"
+        "outputId": "100383ee-7910-4be8-cbfb-957a21a48056"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,9 +254,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gpZSN3JQD5AZ",
-        "outputId": "cdc90641-702f-44da-ee9e-c65fd08e70bd"
+        "outputId": "8ffbaa6e-105e-4a92-8890-df0b1878f9ed"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -276,7 +276,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 8
         }
       ]
     },
@@ -290,9 +290,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0536rGnuFh61",
-        "outputId": "fb4d39b0-fca1-4f6e-cb97-26441b16c31d"
+        "outputId": "e7b57a08-57b5-4536-ce44-88d48074df98"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,7 +302,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 9
         }
       ]
     },
@@ -324,17 +324,213 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MWGrO6NiFwEQ",
-        "outputId": "70f3c3f1-09c4-4b53-8dca-98de6dd342e0"
+        "outputId": "7ef6b4dd-7c02-415c-e94a-bec496b1a6b4"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1.14 ms ± 27.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-            "1.13 ms ± 20.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+            "2.66 ms ± 385 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+            "2.75 ms ± 309 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# working with dimensions\n",
+        "\n",
+        "a = np.random.rand(1000).reshape(5,4,2,5,5)\n",
+        "a.shape"
+      ],
+      "metadata": {
+        "id": "0D1UVe2CGU0x",
+        "outputId": "e936970f-3e16-463d-88c2-f74fff8c146b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(5, 4, 2, 5, 5)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = a.sum(axis=3)\n",
+        "b.shape"
+      ],
+      "metadata": {
+        "id": "CTwpz3-8Sk6f",
+        "outputId": "591e1323-8199-495f-945e-b096bb22b3a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(5, 4, 2, 5)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = np.arange(10)\n",
+        "b = np.ones(10)\n",
+        "\n",
+        "print(\"a is : {}\".format(a))\n",
+        "print(\"b is : {}\".format(b))"
+      ],
+      "metadata": {
+        "id": "c_aNS9zcSozQ",
+        "outputId": "7a84d6db-7fa7-4b4c-8497-9407d9196821",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is : [0 1 2 3 4 5 6 7 8 9]\n",
+            "b is : [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.add(a,b, out=b)"
+      ],
+      "metadata": {
+        "id": "PWVVbhk0YWUd",
+        "outputId": "8fc137a7-6652-4f0e-9a16-4c1611c22ed9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1.,  2.,  3.,  4.,  5.,  6.,  7.,  8.,  9., 10.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z = np.zeros(20)\n",
+        "\n",
+        "np.add(a,10, out=z[::2])"
+      ],
+      "metadata": {
+        "id": "vInugDkTZJ7v",
+        "outputId": "5c466da3-9a46-4a43-c7a4-ec4915c35bd4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10., 11., 12., 13., 14., 15., 16., 17., 18., 19.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z"
+      ],
+      "metadata": {
+        "id": "Yf77_0UZaAWR",
+        "outputId": "cd51319b-ffc9-4481-8520-7674e3a9154d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10.,  0., 11.,  0., 12.,  0., 13.,  0., 14.,  0., 15.,  0., 16.,\n",
+              "        0., 17.,  0., 18.,  0., 19.,  0.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# same operation, different method\n",
+        "# [::2] it means every other elements\n",
+        "\n",
+        "z[::2] = a+50\n",
+        "z"
+      ],
+      "metadata": {
+        "id": "MQzuMrNIaPZc",
+        "outputId": "796941e0-ea5c-42d4-ba6f-b9a836b91560",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([50.,  0., 51.,  0., 52.,  0., 53.,  0., 54.,  0., 55.,  0., 56.,\n",
+              "        0., 57.,  0., 58.,  0., 59.,  0.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
         }
       ]
     },
@@ -342,7 +538,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "0D1UVe2CGU0x"
+        "id": "spzOcXuwaqeo"
       },
       "execution_count": null,
       "outputs": []
