--- a/Intermediate_Numpy.ipynb
+++ b/Intermediate_Numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBta1/CO323AaV1lR2It/n",
+      "authorship_tag": "ABX9TyOy0Sr2i62d+PPVKEaJVny+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1590,11 +1590,11 @@
         "X_train, X_test, y_train, y_test = myTestTrainSplit(X, y, 0.25)"
       ],
       "metadata": {
-        "id": "JWHWKsjZ2Exg",
-        "outputId": "ded36a9f-3d3d-4341-e6bf-29fd73adb103",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JWHWKsjZ2Exg",
+        "outputId": "ded36a9f-3d3d-4341-e6bf-29fd73adb103"
       },
       "execution_count": 104,
       "outputs": [
@@ -1619,11 +1619,11 @@
         "print(f\"X_test shape : {X_test.shape}, y_test.shape : {y_test.shape}\")"
       ],
       "metadata": {
-        "id": "Ei3sAPcw2OnL",
-        "outputId": "e31144b7-2033-499c-de6b-86a74c0bb337",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ei3sAPcw2OnL",
+        "outputId": "e31144b7-2033-499c-de6b-86a74c0bb337"
       },
       "execution_count": 107,
       "outputs": [
@@ -1639,9 +1639,283 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# making a squared distance matrix between X_train and X_test\n",
+        "\n",
+        "\n",
+        "\"\"\"\n",
+        "we add new axis in X_train[:, np.newaxis,:] and X_test[np.newaxis,:,:] in this way, becuase the numpy broadcasts the two matrices\n",
+        "and subtract each element of X_test from each elemnt of X_train\n",
+        "\"\"\"\n",
+        "dis_matrix = (X_train[:,np.newaxis,:] - X_test[np.newaxis,:,:])**2"
+      ],
       "metadata": {
         "id": "Do53Y0PF2o-N"
+      },
+      "execution_count": 111,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# see the shape of Dis_matrix\n",
+        "\n",
+        "dis_matrix.shape"
+      ],
+      "metadata": {
+        "id": "P7U9Qh3CKcGp",
+        "outputId": "ba096376-48ab-466b-e86a-8775c841be85",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(113, 37, 4)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 112
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# we want to map all the 4 features into one\n",
+        "# squeezing the 3th dimension\n",
+        "\n",
+        "dis_matrix = np.sum((X_train[:,np.newaxis,:] - X_test[np.newaxis,:,:])**2, axis=2)"
+      ],
+      "metadata": {
+        "id": "cDOK99YOKgd3"
+      },
+      "execution_count": 113,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dis_matrix.shape"
+      ],
+      "metadata": {
+        "id": "tcQmD810LGjs",
+        "outputId": "c2344766-af70-456e-b3a2-cb1073a0a939",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(113, 37)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 115
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# sorting nearest indeces\n",
+        "\n",
+        "near_indx = np.argsort(dis_matrix, axis=1)\n",
+        "near_indx"
+      ],
+      "metadata": {
+        "id": "lzkBP3mQLIvm",
+        "outputId": "ed4d728f-538b-4917-87e2-c1cf5af3265d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[35, 14, 10, ..., 26, 11,  5],\n",
+              "       [29,  6, 25, ..., 17, 24, 11],\n",
+              "       [21, 36, 27, ..., 32, 26,  5],\n",
+              "       ...,\n",
+              "       [36, 27,  3, ..., 32, 26,  5],\n",
+              "       [ 7, 35, 14, ..., 26,  5, 11],\n",
+              "       [ 3, 27, 36, ..., 32, 26,  5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 116
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# shape of near_index\n",
+        "\n",
+        "near_indx.shape"
+      ],
+      "metadata": {
+        "id": "HXrdf3ddOa8e",
+        "outputId": "a1abb792-484c-441c-a9bf-2c77b7a01911",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(113, 37)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 118
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for example 5 nearest neighbors of the first row\n",
+        "\n",
+        "near_indx[0,:5]"
+      ],
+      "metadata": {
+        "id": "8WyvRlTAOg0K",
+        "outputId": "c5c37809-266e-49b3-ad11-062faa5cf510",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([35, 14, 10, 31, 19])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 119
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 5 nearest neighbors of the first column\n",
+        "\n",
+        "near_indx[:5,0]"
+      ],
+      "metadata": {
+        "id": "01l7j_8dO5DL",
+        "outputId": "e10ad721-70ac-4855-9548-5366ecc1abd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([35, 29, 21, 11, 14])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 120
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# see the class of nearest neighbors of first column (test)\n",
+        "\n",
+        "temp_indx = near_indx[:6,0]"
+      ],
+      "metadata": {
+        "id": "A8PuAo0lPLvP"
+      },
+      "execution_count": 125,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train[temp_indx]"
+      ],
+      "metadata": {
+        "id": "ipLpnUT8Qjl0",
+        "outputId": "6ea50a89-20de-4729-bbd7-e38c2ea4479c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2, 1, 0, 0, 0, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 126
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# see which class occured the most\n",
+        "\n",
+        "from scipy import stats\n",
+        "\n",
+        "stats.mode(y_train[temp_indx])"
+      ],
+      "metadata": {
+        "id": "VcEhx_ZJQzVj",
+        "outputId": "06907da8-7356-453d-b4a2-f97bde565771",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ModeResult(mode=array([0]), count=array([3]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "EhyNBDUERA5W"
       },
       "execution_count": null,
       "outputs": []
