--- a/Intermediate_Numpy.ipynb
+++ b/Intermediate_Numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOy0Sr2i62d+PPVKEaJVny+",
+      "authorship_tag": "ABX9TyPCl9IdAgd9R4dWMbw4pDpy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1912,10 +1912,65 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**<h1> Making data structures - DATASETs </h1>**"
+      ],
+      "metadata": {
+        "id": "MCkABEcsUpI9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "dataset with columns : Name, with 20 characters at most\n",
+        "                       ID, with 10 characters at most\n",
+        "                       Marks, integer\n",
+        "                       GPA, float\n",
+        "\"\"\"\n",
+        "\n",
+        "data_set = np.array([(\"Pouya\", \"943\", 5, 19), (\"Gholi\", \"942\", 5, 18.5)],\n",
+        "                   dtype=[(\"Name\", \"U20\"), (\"ID\", \"U10\"), (\"Marks\", \"i8\"), (\"GPA\",\"f4\")])"
+      ],
+      "metadata": {
+        "id": "EhyNBDUERA5W"
+      },
+      "execution_count": 131,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_set"
+      ],
+      "metadata": {
+        "id": "nBAibyJiVe8x",
+        "outputId": "8355f38a-f772-440d-cb59-e00f5b8f2cc5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([('Pouya', '943', 5, 19. ), ('Gholi', '942', 5, 18.5)],\n",
+              "      dtype=[('Name', '<U20'), ('ID', '<U10'), ('Marks', '<i8'), ('GPA', '<f4')])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 132
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "EhyNBDUERA5W"
+        "id": "5WpteDVJWt65"
       },
       "execution_count": null,
       "outputs": []
