--- a/Intermediate_Pandas.ipynb
+++ b/Intermediate_Pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmB0GvFZpqm7LrZKOMnHrI",
+      "authorship_tag": "ABX9TyPjb8CUoSe5EsWdA8LgHjUf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2281,10 +2281,405 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**<h1> Working with Real DATA </h1>**"
+      ],
+      "metadata": {
+        "id": "fJWMYUGoPo7-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = pd.read_csv(\"/content/Adults.csv\")\n",
+        "data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 624
+        },
+        "id": "tpxpezs6M0cE",
+        "outputId": "76d7023e-a45d-420e-a020-3be4afd3655a"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "       39          State-gov   77516    Bachelors   13        Never-married  \\\n",
+              "0      50   Self-emp-not-inc   83311    Bachelors   13   Married-civ-spouse   \n",
+              "1      38            Private  215646      HS-grad    9             Divorced   \n",
+              "2      53            Private  234721         11th    7   Married-civ-spouse   \n",
+              "3      28            Private  338409    Bachelors   13   Married-civ-spouse   \n",
+              "4      37            Private  284582      Masters   14   Married-civ-spouse   \n",
+              "...    ..                ...     ...          ...  ...                  ...   \n",
+              "32555  27            Private  257302   Assoc-acdm   12   Married-civ-spouse   \n",
+              "32556  40            Private  154374      HS-grad    9   Married-civ-spouse   \n",
+              "32557  58            Private  151910      HS-grad    9              Widowed   \n",
+              "32558  22            Private  201490      HS-grad    9        Never-married   \n",
+              "32559  52       Self-emp-inc  287927      HS-grad    9   Married-civ-spouse   \n",
+              "\n",
+              "             Adm-clerical   Not-in-family   White     Male   2174   0   40  \\\n",
+              "0         Exec-managerial         Husband   White     Male      0   0   13   \n",
+              "1       Handlers-cleaners   Not-in-family   White     Male      0   0   40   \n",
+              "2       Handlers-cleaners         Husband   Black     Male      0   0   40   \n",
+              "3          Prof-specialty            Wife   Black   Female      0   0   40   \n",
+              "4         Exec-managerial            Wife   White   Female      0   0   40   \n",
+              "...                   ...             ...     ...      ...    ...  ..  ...   \n",
+              "32555        Tech-support            Wife   White   Female      0   0   38   \n",
+              "32556   Machine-op-inspct         Husband   White     Male      0   0   40   \n",
+              "32557        Adm-clerical       Unmarried   White   Female      0   0   40   \n",
+              "32558        Adm-clerical       Own-child   White     Male      0   0   20   \n",
+              "32559     Exec-managerial            Wife   White   Female  15024   0   40   \n",
+              "\n",
+              "        United-States   <=50K  \n",
+              "0       United-States   <=50K  \n",
+              "1       United-States   <=50K  \n",
+              "2       United-States   <=50K  \n",
+              "3                Cuba   <=50K  \n",
+              "4       United-States   <=50K  \n",
+              "...               ...     ...  \n",
+              "32555   United-States   <=50K  \n",
+              "32556   United-States    >50K  \n",
+              "32557   United-States   <=50K  \n",
+              "32558   United-States   <=50K  \n",
+              "32559   United-States    >50K  \n",
+              "\n",
+              "[32560 rows x 15 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-85c78b2b-9c24-40de-9c40-a57d46895585\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>39</th>\n",
+              "      <th>State-gov</th>\n",
+              "      <th>77516</th>\n",
+              "      <th>Bachelors</th>\n",
+              "      <th>13</th>\n",
+              "      <th>Never-married</th>\n",
+              "      <th>Adm-clerical</th>\n",
+              "      <th>Not-in-family</th>\n",
+              "      <th>White</th>\n",
+              "      <th>Male</th>\n",
+              "      <th>2174</th>\n",
+              "      <th>0</th>\n",
+              "      <th>40</th>\n",
+              "      <th>United-States</th>\n",
+              "      <th>&lt;=50K</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>50</td>\n",
+              "      <td>Self-emp-not-inc</td>\n",
+              "      <td>83311</td>\n",
+              "      <td>Bachelors</td>\n",
+              "      <td>13</td>\n",
+              "      <td>Married-civ-spouse</td>\n",
+              "      <td>Exec-managerial</td>\n",
+              "      <td>Husband</td>\n",
+              "      <td>White</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>13</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>38</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>215646</td>\n",
+              "      <td>HS-grad</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Divorced</td>\n",
+              "      <td>Handlers-cleaners</td>\n",
+              "      <td>Not-in-family</td>\n",
+              "      <td>White</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>53</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>234721</td>\n",
+              "      <td>11th</td>\n",
+              "      <td>7</td>\n",
+              "      <td>Married-civ-spouse</td>\n",
+              "      <td>Handlers-cleaners</td>\n",
+              "      <td>Husband</td>\n",
+              "      <td>Black</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>28</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>338409</td>\n",
+              "      <td>Bachelors</td>\n",
+              "      <td>13</td>\n",
+              "      <td>Married-civ-spouse</td>\n",
+              "      <td>Prof-specialty</td>\n",
+              "      <td>Wife</td>\n",
+              "      <td>Black</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>Cuba</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>37</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>284582</td>\n",
+              "      <td>Masters</td>\n",
+              "      <td>14</td>\n",
+              "      <td>Married-civ-spouse</td>\n",
+              "      <td>Exec-managerial</td>\n",
+              "      <td>Wife</td>\n",
+              "      <td>White</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>32555</th>\n",
+              "      <td>27</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>257302</td>\n",
+              "      <td>Assoc-acdm</td>\n",
+              "      <td>12</td>\n",
+              "      <td>Married-civ-spouse</td>\n",
+              "      <td>Tech-support</td>\n",
+              "      <td>Wife</td>\n",
+              "      <td>White</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>38</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>32556</th>\n",
+              "      <td>40</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>154374</td>\n",
+              "      <td>HS-grad</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Married-civ-spouse</td>\n",
+              "      <td>Machine-op-inspct</td>\n",
+              "      <td>Husband</td>\n",
+              "      <td>White</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&gt;50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>32557</th>\n",
+              "      <td>58</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>151910</td>\n",
+              "      <td>HS-grad</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Widowed</td>\n",
+              "      <td>Adm-clerical</td>\n",
+              "      <td>Unmarried</td>\n",
+              "      <td>White</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>32558</th>\n",
+              "      <td>22</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>201490</td>\n",
+              "      <td>HS-grad</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Never-married</td>\n",
+              "      <td>Adm-clerical</td>\n",
+              "      <td>Own-child</td>\n",
+              "      <td>White</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>20</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>32559</th>\n",
+              "      <td>52</td>\n",
+              "      <td>Self-emp-inc</td>\n",
+              "      <td>287927</td>\n",
+              "      <td>HS-grad</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Married-civ-spouse</td>\n",
+              "      <td>Exec-managerial</td>\n",
+              "      <td>Wife</td>\n",
+              "      <td>White</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>15024</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&gt;50K</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>32560 rows × 15 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-85c78b2b-9c24-40de-9c40-a57d46895585')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-85c78b2b-9c24-40de-9c40-a57d46895585 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-85c78b2b-9c24-40de-9c40-a57d46895585');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "tpxpezs6M0cE"
+        "id": "f9HvNmQEP8TD"
       },
       "execution_count": null,
       "outputs": []
