--- a/Intermediate_Pandas.ipynb
+++ b/Intermediate_Pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJSbjyD11c6bi5IW0CqYoU",
+      "authorship_tag": "ABX9TyMrjgIJpc2wv087ZZzZPKy4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4650,9 +4650,64 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# to scam the general information \n",
+        "\n",
+        "data.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AGJ-y8Ykb1zG",
+        "outputId": "af679d4c-e2c7-4c5e-b290-5e94ba1f2f36"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 32561 entries, 0 to 32560\n",
+            "Data columns (total 15 columns):\n",
+            " #   Column  Non-Null Count  Dtype \n",
+            "---  ------  --------------  ----- \n",
+            " 0   C0      32561 non-null  int64 \n",
+            " 1   C1      32561 non-null  object\n",
+            " 2   C2      32561 non-null  int64 \n",
+            " 3   C3      32561 non-null  object\n",
+            " 4   C4      32561 non-null  int64 \n",
+            " 5   C5      32561 non-null  object\n",
+            " 6   C6      32561 non-null  object\n",
+            " 7   C7      32561 non-null  object\n",
+            " 8   C8      32561 non-null  object\n",
+            " 9   C9      32561 non-null  object\n",
+            " 10  C10     32561 non-null  int64 \n",
+            " 11  C11     32561 non-null  int64 \n",
+            " 12  C12     32561 non-null  int64 \n",
+            " 13  C13     32561 non-null  object\n",
+            " 14  C14     32561 non-null  object\n",
+            "dtypes: int64(6), object(9)\n",
+            "memory usage: 3.7+ MB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**<h3> Grouping - groupby </h3>**"
+      ],
+      "metadata": {
+        "id": "8ar9ZvuSeS5Q"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "AGJ-y8Ykb1zG"
+        "id": "rPP3ddQRcx1l"
       },
       "execution_count": null,
       "outputs": []
