--- a/Matplotlib_Intermediate.ipynb
+++ b/Matplotlib_Intermediate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM2yjJtD1yLDtanbTUK2ANi",
+      "authorship_tag": "ABX9TyNxkI5Pfab7PvrpA/An+TnA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1677,6 +1677,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**<h2> 3D Plots </h2>**"
+      ],
+      "metadata": {
+        "id": "RY6VN9zYh5J8"
+      }
     },
     {
       "cell_type": "code",
